<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/status_crash"
    android:padding="32dp">

    <TextView
        android:id="@+id/tvAlertSentEmoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="🚨"
        android:textSize="80sp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAlertSentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/alerts_dispatched"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlertSentEmoji" />

    <TextView
        android:id="@+id/tvEmergencyDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/emergency_desc"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAlertSentTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnImSafe"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginBottom="60dp"
        android:text="@string/im_safe"
        android:textColor="@color/status_crash"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="24dp"
        app:icon="@android:drawable/checkbox_on_background"
        app:iconGravity="textStart"
        app:iconPadding="12dp"
        app:iconTint="@color/status_crash"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
